--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
 /config.el
 /init.el
 /packages.el
+
+# Compiled
+*.elc
+
+# Packaging
+.cask/
+.eask/
+.eldev/
+.keg/
+
+# Built distribution
+dist/
+
+# Backup files
+*~
+
+# Undo-tree save-files
+*.~undo-tree
